--- a/index.html
+++ b/index.html
@@ -720,8 +720,8 @@
                                 <ul class="coordenadores">
                                     <li class="tree-node">
                                         <a href="#" class="node-link coordenador">
-                                            <img src="imagens/claudiana.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Gabriel</span>
+                                            <img src="imagens/gabriel-fronza.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">gabriel</span>
                                             <p class="node-label-cargo">SERVIDOR</p>
                                         </a>
                                         <a href="#" class="node-link coordenador">
