--- a/index.html
+++ b/index.html
@@ -599,6 +599,11 @@
                                             <span class="node-label">Juliano Cesar</span>
                                             <p class="node-label-cargo">SERVIDOR</p>
                                         </a>
+                                        <a href="#" class="node-link funcionario">
+                                            <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
+                                            <span class="node-label">Andrei</span>
+                                            <p class="node-label-cargo">SERVIDOR</p>
+                                        </a>
                                         <ul class="coordenadores">
                                             <li class="tree-node">
                                                 <a href="#" class="node-link coordenador">
@@ -720,8 +725,8 @@
                                 <ul class="coordenadores">
                                     <li class="tree-node">
                                         <a href="#" class="node-link coordenador">
-                                            <img src="imagens/gabriel-fronza.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">gabriel</span>
+                                            <img src="imagens/gabriel-fronza.jpeg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Gabriel</span>
                                             <p class="node-label-cargo">SERVIDOR</p>
                                         </a>
                                         <a href="#" class="node-link coordenador">
